--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@ title: ""
 				</p>
 			<div class="pure-g">
 				<div class="pure-u-1-5">
-					<h3>Join a club</h3>
+					<h3><a href="mailto:makerlab@brandeis.edu">Join a club</a></h3>
 				</div>
 				<div class="pure-u-1-5">
-					<h3>Become a Maker in Residence</h3>
+					<h3><a href="mailto:makerlab@brandeis.edu">Become a Maker in Residence</a></h3>
 				</div>
 				<div class="pure-u-1-5">
-					<h3>Use the lab for individual research and projects</h3>
+					<h3><a href="mailto:makerlab@brandeis.edu">Use the lab for individual research and projects</a></h3>
 				</div>
 				<div class="pure-u-1-5">
-					<h3>Go to events</h3>
+					<h3><a href="mailto:makerlab@brandeis.edu">Go to events</a></h3>
 				</div>
 				<div class="pure-u-1-5">
-					<h3>Research and coursework</h3>
+					<h3><a href="mailto:makerlab@brandeis.edu">Research and coursework</a></h3>
 				</div>
 			</div>
 		</div>
