--- a/resources/index.html
+++ b/resources/index.html
@@ -66,25 +66,25 @@ title:  "Resources"
             <div class="pure-u-1 pure-u-lg-1-3 border-left">
                 <h3>LTS Special Use Case</h3>
                     <ul>
-                        <li><a href="http://store.steampowered.com/app/358040/">HTC vive</a></li>
-                        <li><a href="https://www3.oculus.com/en-us/rift/">Oculus Rift</a></li>
-                        <li><a href="https://www.amazon.com/Oculus-Rift-Developers-Kit-Dk2/dp/B00F5CWD0I">Oculus DK2</a></li>
-                        <li><a href="https://www.microsoft.com/microsoft-hololens/en-us">[2x] Microsoft Hololens</a></li>
-                        <li><a href="https://www3.oculus.com/en-us/gear-vr/">[2x] Samsung Gear VR</a></li>
+                        <li><a href="http://store.steampowered.com/app/358040/" target="_blank">HTC vive</a></li>
+                        <li><a href="https://www3.oculus.com/en-us/rift/" target="_blank">Oculus Rift</a></li>
+                        <li><a href="https://www.amazon.com/Oculus-Rift-Developers-Kit-Dk2/dp/B00F5CWD0I" target="_blank">Oculus DK2</a></li>
+                        <li><a href="https://www.microsoft.com/microsoft-hololens/en-us" target="_blank">[2x] Microsoft Hololens</a></li>
+                        <li><a href="https://www3.oculus.com/en-us/gear-vr/" target="_blank">[2x] Samsung Gear VR</a></li>
                     </ul>
                 </div>
                 <div class="pure-u-1 pure-u-lg-1-3">
                     <h3>LTS Rentable</h3>
                         <ul>
-                            <li><a href="https://vrkix.com/">[12x] HIgh end google cardboard</a></li>
-                            <li><a href="http://www.osvr.org/">[3x] OSVR Hacker Development Kit</a></li>
+                            <li><a href="https://vrkix.com/" target="_blank">[12x] HIgh end google cardboard</a></li>
+                            <li><a href="http://www.osvr.org/" target="_blank">[3x] OSVR Hacker Development Kit</a></li>
                         </ul>
                 </div>
                 <div class="pure-u-1 pure-u-lg-1-3">
                     <h3>VR club owned</h3>
                         <ul>
-                            <li><a href="http://store.steampowered.com/app/358040/">[2x] HTC vive</a></li>
-                            <li><a href="https://www3.oculus.com/en-us/rift/">[3x] Oculus Rift</a></li>
+                            <li><a href="http://store.steampowered.com/app/358040/" target="_blank">[2x] HTC vive</a></li>
+                            <li><a href="https://www3.oculus.com/en-us/rift/" target="_blank">[3x] Oculus Rift</a></li>
                         </ul>
                 </div>
             </div>
@@ -137,11 +137,11 @@ title:  "Resources"
             <div class="pure-u-1-2 border-left">
                 <h3>LTS Special Use Case</h3>
                 <ul>
-                    <li><a href="https://www.pi-top.com/product/pi-top">Pi top</a></li>
-                    <li><a href="http://excamera.com/sphinx/gameduino/">Gameduino</a></li>
-                    <li><a href="https://developer.mbed.org/platforms/">Mbed boards</a></li>
-                    <li><a href="https://beagleboard.org/black">Beaglebone black</a></li>
-                    <li><a href="https://www.parallella.org/">Parallela</a></li>
+                    <li><a href="https://www.pi-top.com/product/pi-top" target="_blank">Pi top</a></li>
+                    <li><a href="http://excamera.com/sphinx/gameduino/" target="_blank">Gameduino</a></li>
+                    <li><a href="https://developer.mbed.org/platforms/" target="_blank">Mbed boards</a></li>
+                    <li><a href="https://beagleboard.org/black" target="_blank">Beaglebone black</a></li>
+                    <li><a href="https://www.parallella.org/" target="_blank">Parallela</a></li>
                     <li>Aerial Photography Drones - Must have FAA 107 licensing</li>
                     <li>Custom built racing Drones</li>
                     <li>[4x] Soldering kits</li>
@@ -151,19 +151,19 @@ title:  "Resources"
                     <li>solder wick</li>
                     <li>ESD mat</li>
                     <li>rosin core lead free solder</li>
-                    <li><a href="https://www.amazon.com/gp/product/B0085QLNFM/ref=oh_aui_search_detailpage?ie=UTF8&psc=1">[2x] bench power supplies</a></li>
-                    <li><a href="http://www.choosemuse.com/">[2x] Muse Headbands</a></li>
+                    <li><a href="https://www.amazon.com/gp/product/B0085QLNFM/ref=oh_aui_search_detailpage?ie=UTF8&psc=1" target="_blank">[2x] bench power supplies</a></li>
+                    <li><a href="http://www.choosemuse.com/" target="_blank">[2x] Muse Headbands</a></li>
 
-                    <li><a href="https://www.myo.com/">Myo Gesture armband</a></li>
+                    <li><a href="https://www.myo.com/" target="_blank">Myo Gesture armband</a></li>
 
-                    <li><a href="https://www.leapmotion.com/">[4x] Leap motion</a></li>
+                    <li><a href="https://www.leapmotion.com/" target="_blank">[4x] Leap motion</a></li>
                 </ul>
             </div>
             <div class="pure-u-1-2">
                 <h3>LTS Rentable</h3>
                 <ul>
-                    <li><a href="https://www.raspberrypi.org/">Various Raspberry Pi</a></li>
-                    <li><a href="https://www.arduino.cc/">Various arduino boards</a></li>
+                    <li><a href="https://www.raspberrypi.org/" target="_blank">Various Raspberry Pi</a></li>
+                    <li><a href="https://www.arduino.cc/" target="_blank">Various arduino boards</a></li>
                 </ul>
             </div>
         </div>
@@ -181,20 +181,20 @@ title:  "Resources"
             <div class="pure-u-1-2 border-left">
                 <h3>LTS Special Use Case</h3>
                     <ul>
-                        <li><a href="https://www.artec3d.com/3d-scanner/artec-spider">Artec Spider</a></li>
-                        <li><a href="http://www8.hp.com/us/en/campaign/3Dscanner/overview.html">David HP 3D Structured Light Scanner Pro S2</a></li>
-                        <li><a href="http://www.nextengine.com/">NextEngine desktop 3D scanner</a></li>
+                        <li><a href="https://www.artec3d.com/3d-scanner/artec-spider" target="_blank">Artec Spider</a></li>
+                        <li><a href="http://www8.hp.com/us/en/campaign/3Dscanner/overview.html" target="_blank">David HP 3D Structured Light Scanner Pro S2</a></li>
+                        <li><a href="http://www.nextengine.com/" target="_blank">NextEngine desktop 3D scanner</a></li>
                         <li>Dslr or Aerial Photography platform for Photogrammetry</li>
-                        <li><a href="http://www.agisoft.com/">Agisoft Photoscan</a></li>
-                        <li><a href="https://pix4d.com/">Pix4D</a></li>
-                        <li><a href="http://skanect.occipital.com/">[2x] Xbox kinect 360 with Skanect</a></li>
-                        <li><a href="http://skanect.occipital.com/">[2x] Xbox kinect one</a></li>
+                        <li><a href="http://www.agisoft.com/" target="_blank">Agisoft Photoscan</a></li>
+                        <li><a href="https://pix4d.com/" target="_blank">Pix4D</a></li>
+                        <li><a href="http://skanect.occipital.com/" target="_blank">[2x] Xbox kinect 360 with Skanect</a></li>
+                        <li><a href="http://skanect.occipital.com/" target="_blank">[2x] Xbox kinect one</a></li>
                     </ul>
             </div>
             <div class="pure-u-1-2">
                 <h3>LTS Rentable</h3>
                     <ul>
-                        <li><a href="http://skanect.occipital.com/">[4x] Xbox kinect 360 with Skanect</a></li>
+                        <li><a href="http://skanect.occipital.com/" target="_blank">[4x] Xbox kinect 360 with Skanect</a></li>
                     </ul>
             </div>
         </div>
@@ -214,9 +214,9 @@ title:  "Resources"
                     <li>27" iMac (Corei7 / 16GB)
                     <li>[2x] 24" all-in-one Dell Desktop PC (Corei7 / 16GB)
                     <li>5 foot pull-down Projection Screen
-                    <li><a href="http://ideum.com/touch-tables/pro/?id=55">55" Ideium Touch Table w/Win10</a></li>
-                    <li><a href="https://www.filabot.com/collections/filabot-core/products/filabot-original?variant=570433109">Fillabot 3D printer filament Reclaimer and Extruder/Recycler</a></li>
-                    <li><a href="https://www.filastruder.com/products/filastruder-kit">Fillistruder 3D printer filament Reclaimer and Extruder/Recycler</a></li>
+                    <li><a href="http://ideum.com/touch-tables/pro/?id=55" target="_blank">55" Ideium Touch Table w/Win10</a></li>
+                    <li><a href="https://www.filabot.com/collections/filabot-core/products/filabot-original?variant=570433109" target="_blank">Fillabot 3D printer filament Reclaimer and Extruder/Recycler</a></li>
+                    <li><a href="https://www.filastruder.com/products/filastruder-kit" target="_blank">Fillistruder 3D printer filament Reclaimer and Extruder/Recycler</a></li>
                 </ul>
             </div>
         </div>
