--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@ title: ""
 				<p>Brandeis MakerLab is a free-of-charge service open to the entire Brandeis community, located in the Farber Library Mezzanine, open during <a href="https://lts.brandeis.edu/location/hours/mainlibrary.html" target="_blank">library operating hours</a>. Stop by and check us out!
 				</p>
 			<div class="pure-g">
-				<div class="pure-u-1-5">
+				<div class="pure-u-1 pure-u-lg-1-5">
 					<h3><a href="mailto:makerlab@brandeis.edu">Join a club</a></h3>
 				</div>
-				<div class="pure-u-1-5">
+				<div class="pure-u-1 pure-u-lg-1-5">
 					<h3><a href="mailto:makerlab@brandeis.edu">Become a Maker in Residence</a></h3>
 				</div>
-				<div class="pure-u-1-5">
+				<div class="pure-u-1 pure-u-lg-1-5">
 					<h3><a href="mailto:makerlab@brandeis.edu">Use the lab for individual research and projects</a></h3>
 				</div>
-				<div class="pure-u-1-5">
+				<div class="pure-u-1 pure-u-lg-1-5">
 					<h3><a href="mailto:makerlab@brandeis.edu">Go to events</a></h3>
 				</div>
-				<div class="pure-u-1-5">
+				<div class="pure-u-1 pure-u-lg-1-5">
 					<h3><a href="mailto:makerlab@brandeis.edu">Research and coursework</a></h3>
 				</div>
 			</div>
@@ -44,7 +44,7 @@ title: ""
 
 	<!-- What we do section -->
 	<div class="pure-g">
-		<div class="pure-u-1-2 makerlab-green" id="activities">
+		<div class="pure-u-1 pure-u-md-1-2 makerlab-green section" id="activities">
 			<h2>What we do</h2>
 			<div class="features">
 				<section class="quadrant">
@@ -69,7 +69,7 @@ title: ""
 				</section>
 			</div>
 		</div>
-		<div class="pure-u-1-2 blue" id="tools">
+		<div class="pure-u-1 pure-u-md-1-2 blue section" id="tools">
 			<h2>Tools we use</h2>
 			<div class="features">
 				<section class="quadrant">
