--- a/resources/index.html
+++ b/resources/index.html
@@ -3,65 +3,69 @@ layout: page
 title:  "Resources"
 ---
 <div class="pure-g">
-    <div class="pure-u-1-4">
+    <div class="pure-u-1 pure-u-lg-1-4">
         <h2 class="resources-title" id="fabrication">3D Printers</h2>
     </div>
-    <div class="pure-u-1 pure-u-lg-1-3 border-left">
-        <h3>LTS Owned</h3>
-        <ul>
-            <li><a href="http://www.flashforge-usa.com/flashforge-new-creator-pro-3d-printer/" target="_blank">[4x] FlashForge Creator Pro</a></li>
-            <li><a href="http://shop.prusa3d.com/en/3d-printers/59-original-prusa-i3-mk2-kit.html" target="_blank">[4x] Official Prusa i3 MK2</a></li>
-        </ul>
-        <h3>LTS Rentable</h3>
-        <ul>
-            <li><a href="http://www.monoprice.com/product?c_id=107&cp_id=10724&cs_id=1072403&p_id=15365" target="_blank">[6x] MP Mini Select</a></li>
-            <li><a href="https://www.seemecnc.com/products/eris-desktop-3d-printer" target="_blank">SeeMeCNC Eris Delta</a></li>
-            <li><a href="https://printm3d.com/themicro/" target="_blank">[3x] M3D mini (Blue, Green, Orange)</a></li>
-        </ul>
-        <h3>LTS Special Use Case</h3>
-        <ul>
-            <li><a href="https://www.zcorp.com/Z-Corp/ZPrinters-150-and-250-Online-Press-Kit/spage.aspx?version=0&language_id=1" target="_blank">Z-corp ZPrinter 250</a></li>
-            <li><a href="http://www.pancakebot.com" target="_blank">PancakeBot</a></li>
-            <li><a href="http://www.muve3d.net/press/product/muve-1-laser/" target="_blank">[2x] mUVe SLA printers (one laser, one DLP)</a></li>
-            <li><a href="https://formlabs.com/3d-printers/form-1-plus/" target="_blank">[2x] FormLabs Form1 SLA</a></li>
-            <li><a href="http://bukito3d.com/" target="_blank">DeezMaker Bukito</a></li>
-            <li><a href="https://printrbot.com/shop/assembled-simple-metal-with-heated-bed/" target="_blank">Printrbot (paste extruder modification)</a></li>
-            <li><a href="http://deltaprintr.com/" target="_blank">Deltaprintr</a></li>
-            <li><a href="https://www.3dprintersonlinestore.com/professional-prusa-i3-wanhao" target="_blank">Wanhao Prussia i3</a></li>
-        </ul>
-    </div>
-    <div class="pure-u-1 pure-u-lg-1-3">
-        <h3>Deis3D Owned</h3>
-        <ul>
-            <li><a href="https://store.makerbot.com/printers/replicator2x/" target="_blank">[11x] MakerBot Rep2</a></li>
-            <li><a href="https://store.makerbot.com/printers/replicator2x/" target="_blank">MakerBot Rep2x</a></li>
-            <li><a href="https://www.lpfrg.com" target="_blank">LeapFrog Creatr XL</a></li>
-            <li><a href="https://www.typeamachines.com" target="_blank">Type A Machines Series 1</a></li>
-            <li><a href="https://www.deltamaker.com/products/deltamaker-delta-robot-3d-printer" target="_blank">DeltaMaker</a></li>
-            <li><a href="http://deltaprintr.com" target="_blank">DeltaPrintr</a></li>
-            <li><a href="https://ultimaker.com" target="_blank">MakerGear M2</a></li>
-            <li><a href="https://ultimaker.com" target="_blank">Ultimaker 2</a></li>
-            <li><a href="http://www.ordsolutions.com/rova3d-5-extruder-3d-printer/" target="_blank">ORD Solutions RoVa 5</a></li>
-            <li><a href="http://builder3dprinters.com/products/builder-dual-feed-overview/" target="_blank">Builder</a></li>
-            <li><a href="https://www.bq.com/en/3d-world" target="_blank">BQ Witbox</a></li>
-            <li><a href="https://www.seemecnc.com/collections/3d-printers/products/rostock-max-complete-kit?variant=373404417" target="_blank">SeeMeCNC Rostock Max V2</a></li>
-            <li><a href="https://www.3dprintersonlinestore.com/professional-prusa-i3-wanhao" target="_blank">[2x] Prusa i3</a></li>
-            <li><a href="http://reprap.org/wiki/FoldaRap" target="_blank">FoldaRap</a></li>
-            <li><a href="https://www.lulzbot.com/store/printers/lulzbot-taz-5" target="_blank">Lulzbot Taz 5</a></li>
-            <li><a href="http://www.ideaprinter-usa.com" target="_blank">FusionTech ideaPrinter F100L</a></li>
-            <li><a href="http://www.morgan3dp.com" target="_blank">Morgan Pro</a></li>
-            <li><a href="http://www.wasproject.it/w/en/" target="_blank">WASP DeltaWASP 20 40 Turbo</a></li>
-        </ul>
+    <div class="pure-u-1 pure-u-md-3-4">
+        <div class="pure-g">
+            <div class="pure-u-1 pure-u-lg-1-2 border-left">
+                <h3>LTS Owned</h3>
+                <ul>
+                    <li><a href="http://www.flashforge-usa.com/flashforge-new-creator-pro-3d-printer/" target="_blank">[4x] FlashForge Creator Pro</a></li>
+                    <li><a href="http://shop.prusa3d.com/en/3d-printers/59-original-prusa-i3-mk2-kit.html" target="_blank">[4x] Official Prusa i3 MK2</a></li>
+                </ul>
+                <h3>LTS Rentable</h3>
+                <ul>
+                    <li><a href="http://www.monoprice.com/product?c_id=107&cp_id=10724&cs_id=1072403&p_id=15365" target="_blank">[6x] MP Mini Select</a></li>
+                    <li><a href="https://www.seemecnc.com/products/eris-desktop-3d-printer" target="_blank">SeeMeCNC Eris Delta</a></li>
+                    <li><a href="https://printm3d.com/themicro/" target="_blank">[3x] M3D mini (Blue, Green, Orange)</a></li>
+                </ul>
+                <h3>LTS Special Use Case</h3>
+                <ul>
+                    <li><a href="https://www.zcorp.com/Z-Corp/ZPrinters-150-and-250-Online-Press-Kit/spage.aspx?version=0&language_id=1" target="_blank">Z-corp ZPrinter 250</a></li>
+                    <li><a href="http://www.pancakebot.com" target="_blank">PancakeBot</a></li>
+                    <li><a href="http://www.muve3d.net/press/product/muve-1-laser/" target="_blank">[2x] mUVe SLA printers (one laser, one DLP)</a></li>
+                    <li><a href="https://formlabs.com/3d-printers/form-1-plus/" target="_blank">[2x] FormLabs Form1 SLA</a></li>
+                    <li><a href="http://bukito3d.com/" target="_blank">DeezMaker Bukito</a></li>
+                    <li><a href="https://printrbot.com/shop/assembled-simple-metal-with-heated-bed/" target="_blank">Printrbot (paste extruder modification)</a></li>
+                    <li><a href="http://deltaprintr.com/" target="_blank">Deltaprintr</a></li>
+                    <li><a href="https://www.3dprintersonlinestore.com/professional-prusa-i3-wanhao" target="_blank">Wanhao Prussia i3</a></li>
+                </ul>
+            </div>
+            <div class="pure-u-1 pure-u-lg-1-2">
+                <h3>Deis3D Owned</h3>
+                <ul>
+                    <li><a href="https://store.makerbot.com/printers/replicator2x/" target="_blank">[11x] MakerBot Rep2</a></li>
+                    <li><a href="https://store.makerbot.com/printers/replicator2x/" target="_blank">MakerBot Rep2x</a></li>
+                    <li><a href="https://www.lpfrg.com" target="_blank">LeapFrog Creatr XL</a></li>
+                    <li><a href="https://www.typeamachines.com" target="_blank">Type A Machines Series 1</a></li>
+                    <li><a href="https://www.deltamaker.com/products/deltamaker-delta-robot-3d-printer" target="_blank">DeltaMaker</a></li>
+                    <li><a href="http://deltaprintr.com" target="_blank">DeltaPrintr</a></li>
+                    <li><a href="https://ultimaker.com" target="_blank">MakerGear M2</a></li>
+                    <li><a href="https://ultimaker.com" target="_blank">Ultimaker 2</a></li>
+                    <li><a href="http://www.ordsolutions.com/rova3d-5-extruder-3d-printer/" target="_blank">ORD Solutions RoVa 5</a></li>
+                    <li><a href="http://builder3dprinters.com/products/builder-dual-feed-overview/" target="_blank">Builder</a></li>
+                    <li><a href="https://www.bq.com/en/3d-world" target="_blank">BQ Witbox</a></li>
+                    <li><a href="https://www.seemecnc.com/collections/3d-printers/products/rostock-max-complete-kit?variant=373404417" target="_blank">SeeMeCNC Rostock Max V2</a></li>
+                    <li><a href="https://www.3dprintersonlinestore.com/professional-prusa-i3-wanhao" target="_blank">[2x] Prusa i3</a></li>
+                    <li><a href="http://reprap.org/wiki/FoldaRap" target="_blank">FoldaRap</a></li>
+                    <li><a href="https://www.lulzbot.com/store/printers/lulzbot-taz-5" target="_blank">Lulzbot Taz 5</a></li>
+                    <li><a href="http://www.ideaprinter-usa.com" target="_blank">FusionTech ideaPrinter F100L</a></li>
+                    <li><a href="http://www.morgan3dp.com" target="_blank">Morgan Pro</a></li>
+                    <li><a href="http://www.wasproject.it/w/en/" target="_blank">WASP DeltaWASP 20 40 Turbo</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 
 <hr>
 
 <div class="pure-g">
-    <div class="pure-u-1-4">
+    <div class="pure-u-1 pure-u-lg-1-4">
         <h2 class="resources-title" id="vr-ar">VR Headsets (HMDs)</h2>
     </div>
-    <div class="pure-u-3-4">
+    <div class="pure-u-1 pure-u-lg-3-4">
         <div class="pure-g">
             <div class="pure-u-1 pure-u-lg-1-3 border-left">
                 <h3>LTS Special Use Case</h3>
@@ -80,7 +84,7 @@ title:  "Resources"
                             <li><a href="http://www.osvr.org/" target="_blank">[3x] OSVR Hacker Development Kit</a></li>
                         </ul>
                 </div>
-                <div class="pure-u-1 pure-u-lg-1-3">
+                <div class="pure-u-1 pure-u-md-1-3">
                     <h3>VR club owned</h3>
                         <ul>
                             <li><a href="http://store.steampowered.com/app/358040/" target="_blank">[2x] HTC vive</a></li>
@@ -95,10 +99,10 @@ title:  "Resources"
 <hr>
 
 <div class="pure-g">
-    <div class="pure-u-1-4">
+    <div class="pure-u-1 pure-u-lg-1-4">
         <h2 class="resources-title">Custom PCs</h2>
     </div>
-    <div class="pure-u-3-4">
+    <div class="pure-u-1 pure-u-lg-3-4">
         <div class="pure-g">
             <div class="pure-u-1 pure-u-lg-1-3 border-left">
                 <h3>LTS owned in the MakerLab</h3>
@@ -129,12 +133,12 @@ title:  "Resources"
 <hr>
 
 <div class="pure-g">
-    <div class="pure-u-1-4">
+    <div class="pure-u-1 pure-u-lg-1-4">
         <h2 class="resources-title" id="embedded-systems">Embedded Systems</h2>
     </div>
-    <div class="pure-u-3-4">
+    <div class="pure-u-1 pure-u-lg-3-4">
         <div class="pure-g">
-            <div class="pure-u-1-2 border-left">
+            <div class="pure-u-1 pure-u-lg-1-2 border-left">
                 <h3>LTS Special Use Case</h3>
                 <ul>
                     <li><a href="https://www.pi-top.com/product/pi-top" target="_blank">Pi top</a></li>
@@ -159,7 +163,7 @@ title:  "Resources"
                     <li><a href="https://www.leapmotion.com/" target="_blank">[4x] Leap motion</a></li>
                 </ul>
             </div>
-            <div class="pure-u-1-2">
+            <div class="pure-u-1 pure-u-lg-1-2">
                 <h3>LTS Rentable</h3>
                 <ul>
                     <li><a href="https://www.raspberrypi.org/" target="_blank">Various Raspberry Pi</a></li>
@@ -173,12 +177,12 @@ title:  "Resources"
 <hr>
 
 <div class="pure-g">
-    <div class="pure-u-1-4">
+    <div class="pure-u-1 pure-u-lg-1-4">
         <h2 class="resources-title" id="scanning">3D Scanning</h2>
     </div>
-    <div class="pure-u-3-4">
+    <div class="pure-u-1 pure-u-lg-3-4">
         <div class="pure-g">
-            <div class="pure-u-1-2 border-left">
+            <div class="pure-u-1 pure-u-lg-1-2  border-left">
                 <h3>LTS Special Use Case</h3>
                     <ul>
                         <li><a href="https://www.artec3d.com/3d-scanner/artec-spider" target="_blank">Artec Spider</a></li>
@@ -191,7 +195,7 @@ title:  "Resources"
                         <li><a href="http://skanect.occipital.com/" target="_blank">[2x] Xbox kinect one</a></li>
                     </ul>
             </div>
-            <div class="pure-u-1-2">
+            <div class="pure-u-1 pure-u-lg-1-2">
                 <h3>LTS Rentable</h3>
                     <ul>
                         <li><a href="http://skanect.occipital.com/" target="_blank">[4x] Xbox kinect 360 with Skanect</a></li>
@@ -204,10 +208,10 @@ title:  "Resources"
 <hr>
 
 <div class="pure-g">
-    <div class="pure-u-1-4">
+    <div class="pure-u-1 pure-u-md-1-4">
         <h2 class="resources-title" id="fabrication">Other MakerLab Gear</h2>
     </div>
-    <div class="pure-u-3-4">
+    <div class="pure-u-1 pure-u-md-3-4">
         <div class="pure-g">
             <div class="pure-u-1 border-left">
                 <ul>
